[package]
name = "runehook"
version = "0.3.0"
edition = "2021"

[workspace]
resolver = "2"

[[bin]]
name = "runehook"
path = "src/main.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chainhook-sdk = { version = "=0.12.11", features = [
    "zeromq",
], git = "https://github.com/midl-xyz/chainhook.git", branch = "testnetv4" }
bitcoin = { version = "0.33.0-rc1", features = [
    "rand",
    "serde",
], git = "https://github.com/midl-xyz/rust-bitcoin.git", branch = "testnet4" }
lru = "0.12.3"
ordinals = { version = "0.0.9", path = "crates/ordinals" }
bytes = "1.3"
rusqlite = { version = "0.31.0", features = ["bundled"] }
serde = "1"
serde_derive = "1"
hex = "0.4.3"
rand = "0.8.5"
hiro-system-kit = "0.3.1"
toml = { version = "0.5.11", features = ["preserve_order"] }
ctrlc = { version = "3.2.2", optional = true }
reqwest = { version = "0.11", features = ["stream", "json"] }
crossbeam-channel = "0.5.8"
clap = { version = "4.3.2", features = ["derive"] }
clap_generate = { version = "3.0.3" }
tokio-postgres = "0.7.10"
tokio = { version = "1.38.0", features = ["rt-multi-thread", "macros"] }
refinery = { version = "0.8", features = ["tokio-postgres"] }
num-traits = "0.2.14"
maplit = "1.0.2"

# mempool
zmq = { version = "0.10.0" }

[dev-dependencies]
test-case = "3.1.0"

[features]
debug = ["hiro-system-kit/debug"]
release = ["hiro-system-kit/release"]

[patch.crates-io.bitcoin-addresses]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.base58ck]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoin]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoin_hashes]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoin-internals]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoin-io]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoin-primitives]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoin-units]
git = "https://github.com/midl-xyz/rust-bitcoin.git"
branch = "testnet4"

[patch.crates-io.bitcoincore-rpc]
git = "https://github.com/midl-xyz/rust-bitcoincore-rpc.git"
branch = "testnet-v4"

[patch.crates-io.bitcoincore-rpc-json]
git = "https://github.com/midl-xyz/rust-bitcoincore-rpc.git"
branch = "testnet-v4"

[patch.crates-io]
# stacks-codec = "2.5"
stacks-codec = { git = "https://github.com/hirosystems/clarinet.git", version = "2.7.0", tag = "v2.7.0" }
chainhook = { git = "https://github.com/midl-xyz/chainhook.git", branch = "testnetv4" }
chainhook-sdk = { git = "https://github.com/midl-xyz/chainhook.git", branch = "testnetv4" }
